2008-05-20  Florian Boor  <florian.boor@kernelconcepts.de>

	* Release 0.3

2008-04-16  Neal H. Walfield  <neal@gnu.org>

        * src/playlist.c (IS_HILDON): Don't undefine.
        (struct _PlayList) [IS_HILDON]: remove field source.
        (playbin_ensure) [IS_HILDON]: Use playbinmaemo rather than
        playbin.
        (play_list_set_sink) [IS_HILDON]: Implement in the usual fashion.
        (play_list_play) [IS_HILDON]: Use the "uri", not the "location",
        property.

2008-03-28  Florian Boor  <florian.boor@kernelconcepts.de>

	* src/playlist.c (toplevel): Activate playbin for Maemo since it is
	  supposed to work again.

2008-01-11  Graham Cobb  <g+770@cobb.uk.net>

	* src/lastfm.c (HANDSHAKE_URI): Move to V1.2 of Audioscrobbler
	Realtime Submission Protocol (last.fm)

	* src/main.c (main): Create menu not menubar in chinook

2007-11-06  Graham Cobb  <g+770@cobb.uk.net>

	* src/main.c (main): changes for hildonprogram/hildonwindow in chinook

2007-11-04  Graham Cobb  <g+770@cobb.uk.net>

	* debian/rules (DEB_CONFIGURE_USER_FLAGS): use --enable-gpe

	* configure.ac, src/Makefile.am, src/main.c: build and compile
	changes for new hildon libraries in chinook

2007-07-23  Graham Cobb  <g+770@cobb.uk.net>

	* mkinstalldirs: add file

	* debian/rules: add options for maemo builds
	(this assumes the debian directory is not used for anything else)

2007-06-07  Florian Boor  <florian@linuxtogo.org>

	* Release 0.2
	* Rename configure.in to configure.ac like in all other bits.
	* Update i18n support in build tools to work with desktop file 
        and to pass distcheck.
	* refresh POTFILES.in

2007-02-25  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (meta_data_reader): If possible, just set to
	GST_STATE_PAUSED to get the stream tags.  Break out of the loop
	once we reach our target state.

	(play_list_add_recursive): More aggressively yield.  Don't
	consider m3u files.

	* src/main.c (playlist_state_changed_cb): Simplify.